--- a/笔记/终.md
+++ b/笔记/终.md
@@ -1055,7 +1055,7 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
 
 #注解
 
-注解，在我看来它是一种信息描述，不影响代码执行，但是可以用来配置一些代码或者功能。常见的注解比如@Override,代表重写方法
+注解，是一种信息描述，可以用来配置一些代码或者功能。不影响代码执行。常见的注解比如@Override,代表重写方法
 
 ##编译期注解处理的是字节码还是java文件 Ok
 
@@ -1143,39 +1143,27 @@ BaseActivity
 将一个复杂对象的构建与它的表示分离，使得同样的构建过程可以创建不同的表示
 
 ```
-public class Computer {
-    private String mCPU;
-    public void setCPU(String CPU) {
-        mCPU = CPU;
+class Computer {
+    private String cpu;
+    private String zhuban;
+    public Computer(Builder builder) {
+        this.cpu = builder.cpu;
+        this.zhuban = builder.zhuban;
     }
-
-    public class ConcreteBuilder {
-        //创建产品实例
-        private Computer mComputer = new Computer();
-
-        @Override
-        public void buildCPU(String cpu) {//组装CPU
-            mComputer.setCPU(cpu);
+    public static class Builder {
+        private String cpu;
+        private String zhuban;
+        public Builder buildCPU(String cpu) {//组装CPU
+            this.cpu = cpu;
+            return this;
         }
-        @Override
+        public Builder buildZhuBan(String zhuban) {
+            this.zhuban = zhuban;
+            return this;
+        }
         public Computer create() {//返回组装好的电脑
-            return mComputer;
+            return new Computer(this);
         }
-    }
-}
-
-public class Director {
-    private Builder mBuild = null;
-
-    public Director(Builder build) {
-        this.mBuild = build;
-    }
-
-    //指挥装机人员组装电脑
-    public void Construct(String cpu, String memory, String hd) {
-        mBuild.buildCPU(cpu);
-        mBuild.buildMemory(memory);
-        mBuild.buildHD(hd);
     }
 }
 ```
@@ -1287,7 +1275,7 @@ eg:ListView/RecyclerView的Adapter的notifyDataSetChanged方法、广播
 
 装饰模式和静态代理代码基本是一样的。
 
-代理模式，侧重于不能直接访问一个对象，只能通过代理来间接访问。装饰器模式是因为没法在编译就确定一个对象的功能，需要运行时动态的给对象添加职责，所以只能把对象的功能拆成一一个个的小部分，动态组装。因为这些功能是由使用者动态配置的。但是代理模式在编译器其实就已经确定了和代理对象的关系。   
+代理模式，侧重于不能直接访问一个对象，只能通过代理来间接访问。装饰器模式是因为没法在编译就确定一个对象的功能，需要运行时动态的给对象添加职责。因为这些功能是由使用者动态配置的。但是代理模式在编译器其实就已经确定了和代理对象的关系。   
 
 这个两个设计模式是为了解决不同的问题而抽象总结出来的。是可以混用的。可以在代理的基础上在加一个装饰，也可以在装饰器的基础上在加一个代理。
 
@@ -1565,7 +1553,7 @@ https://juejin.cn/post/6844904116561379341#comment
 
 > APP启动流程
 
-1. Launcher进程通过Binder机制发送消息给 system_server 进程。在 system_server 中，会判断要启动 App 的进程是否存在，存在则通知进程启动 Activity，由AMS通过 socket 通信告知 Zygote 进程 fork 子进程
+1. Launcher进程通过Binder机制发送消息给 system_server 进程。在 system_server 中，会判断要启动 App 的进程是否存在，存在则通知进程启动 Activity，不存在则由AMS通过 socket 通信告知 Zygote 进程 fork 子进程
 2. app 进程启动后，首先是实例化 ActivityThread，并执行其main()函数：创建 ApplicationThread，Looper，Handler 对象，并开启主线程消息循环Looper.loop()。
 3. ActivityThread的main()调用 attach方法执行AMS #attachApplication()方法，用于初始化Application和Activity。 在system_server进程中，AMS#attachApplication()里依次初始化了Application和Activity，分别有2个关键函数：
    1. bindApplication()方法通知主线程Handler 创建 Application 对象、绑定 Context 、执行 Application#onCreate() 生命周期；
@@ -1649,7 +1637,7 @@ Instrumentation的主要作用就是监控system对app的调用
 1、startActivity最终是由startActivityForResult来启动Activity，只不过传递的requestCode小于0。startActivityForResult内部由Instrumentation处理，然后它通过 Binder 向 AMS 发送请求
 2、Instrumentation通过ActivityManagerNative(AMS代理)通过Binder机制请求AMS
 3、AMS接收到请求之后会执行初始化操作，解析启动模式，保存请求信息等一系列操作。
-4、AMS保存完请求信息之后会将当前栈顶的Activity执行onPause操作，并通过Binder机制通知应用程序继承执行当前栈顶的Activity的onPause方法
+4、AMS保存完请求信息之后会将当前栈顶的Activity执行onPause操作，并通过Binder机制通知应用程序继续执行当前栈顶的Activity的onPause方法
 5、ActivityThread执行完栈顶的Activity的onPause方法之后会通过AMS代理执行进程间通讯告诉AMS，栈顶Actiity已经执行完成onPause方法，继续执行后续操作；
 6、AMS会继续执行启动Activity的逻辑，这时候会判断需要启动的Activity所属的应用进程是否已经启动，若没有启动则首先会启动这个Activity的应用程序进程；(假设已经启动)
 7、AMS将执行创建Activity的通知告知ActivityThread，然后通过反射机制创建出Activity对象，并执行Activity的onCreate方法，onStart方法，onResume方法
@@ -1687,7 +1675,7 @@ Instrumentation的主要作用就是监控system对app的调用
                         Activity.onResume
     ```
 
-* 要在 onPause 中做耗时的操作，因为后一个 Activity 的启动需要等待前一个 onPause 流程的结束
+* 不要在 onPause 中做耗时的操作，因为后一个 Activity 的启动需要等待前一个 onPause 流程的结束
 
 * AMS 内部维护了一个 ActivityStack 并负责栈内的 Activity 的状态同步，AMS 通过 ActivityThread 去同步 Activity 的状态从而完成生命周期方法的调用
 
@@ -1707,7 +1695,7 @@ Binder框架 是基于 C/S 架构的。由Client、Server、ServiceManager、Bin
 
 Server通过Binder驱动在ServiceManager中注册服务 ,Client通过Bindr驱动查询ServiceManager中注册的服务 ,ServiceManager通过Binder驱动返回Server的代理对象 ,Client拿到Server端的代理对象就可以进行进程间通讯了,Client和Server是开发者自己来实现，Binder驱动和ServiceManager是系统提供的。
 
-在Android中client不是直接去和binder打交道，client直接和Manager交互，而manager和managerProxy交互，也就是说client是通过managerProxy去和binder进行交互的。同时service也不是直接和binder交互，而是通过stub去和binder交互。
+在Android中client不是直接去和binder打交道，client是通过managerProxy去和binder进行交互的。同时service也不是直接和binder交互，而是通过stub去和binder交互。
 
 Linux系统将一个进程分为用户空间和内核空间。对于进程之间来说，用户空间的数据不可共享，内核空间的数据可共享，为了保证安全性和独立性，一个进程不能直接操作或者访问另一个进程，即Android的进程是相互独立、隔离的，这就需要跨进程之间的数据通信方式。
 
@@ -1779,7 +1767,7 @@ intentService是个抽象类，继承service。特点是可以异步运行一个
 
 - Activity的UI在5秒内没有响应输入事件（例如，按键按下，屏幕触摸）–主要类型
 - BroadcastReceiver在10秒内没有执行完毕
-- Service在特定时间内（20秒内）无法处理完成–小概率类型
+- Service在特定时间内（20秒内）无法处理完成
 
 通过避免在主线程做太多耗时的操作来优化
 
