--- a/笔记/终.md
+++ b/笔记/终.md
@@ -3029,7 +3029,9 @@ LiveData作为一种观察者模式设计思想，常常被和Rxjava一起比较
 
 ## Lifecycle 
 
-管理（如 Activity 或 Fragment）的生命周期状态的信息，并允许其他对象观察此状态。
+用来监听Activity与Fragment的生命周期变化
+LifeCycleOwner 生命周期拥有者，即Activity与Fragment
+LifeCycleObserver 生命周期观察者，可以是任何类
 
 > lifeCycle的原理是什么？如果在onStart里面订阅，会回调onCreate吗
 
