--- a/笔记/终.md
+++ b/笔记/终.md
@@ -2387,7 +2387,7 @@ kotlinc编译出的class文件变大，Constant pool常量池变大
 
 ​		不用像线程一样嵌套写法，可以将异步变同步写法
 
-不可以替代，1.操作符没有rxjava丰富2.在java代码中还是得用这个3.无法利用多核
+不可以替代，1.操作符没有rxjava丰富2.在java代码中还是得用这个
 
 >协程怎么取消
 
