--- a/笔记/终.md
+++ b/笔记/终.md
@@ -858,7 +858,9 @@ https://juejin.cn/post/6844904083199918093#comment
 
 > 为什么会有泛型擦除？
 
-当运行时jvm不识别泛型，所以有了擦除机制
+1.jvm不识别泛型，需要对JVM代码进行修改
+
+2.版本兼容，兼容1.5之前的API，而且Java 中不支持高版本的 Java 编译生成的 class 文件在低版本的 JRE 上运行
 
 > 带来的问题
 
@@ -2327,6 +2329,10 @@ also->并且对象还做什么事情
 扩展函数并没有修改原有的类，而是生成了一个静态的方法,当我们在Kotlin中调用扩展函数时,编译器将会调用自动生成的函数传入对象实例和参数
 
 被inline修饰的函数(内联函数)，可以在编译时被复制到调用处
+
+> inline  noline  crossinline
+
+inline 关键字的作用，是把 inline 方法以及方法中的 lambda 参数在编译期间复制到调用方，进而减少函数调用以及对象生成。对于有时候我们不想让 inline 关键字对 lambda 参数产生影响，可以使用 noline 关键字。如果想 lambda 也被 inline，但是不影响调用方的控制流程，那么就要是用 crossinline
 
 ## kt的伴生对象是饿汉模式还是懒汉模式
 
