--- a/笔记/终.md
+++ b/笔记/终.md
@@ -1094,7 +1094,7 @@ public class Singleton {
 为啥加volatile，禁止指令重排序
 1.分配内存空间；2.初始化对象3. 将singleton对象指向分配的空间，所以这个时候instance就不为null了
 如果虚拟机存在指令重排序优化，则步骤2和3的顺序是无法确定的。如果A线程率先进入同步代码块并先执行了3而没有执行2，此时因为singleton已经非null。这时候线程B，判断singleton非null并将其返回使用，因为此时Singleton实际上还未初始化，自然就会出错
-
+优点：实现了懒加载，节约了内存空间
 饿汉：
 public class Singleton2 {
 
@@ -1107,7 +1107,8 @@ public class Singleton2 {
         return instance;
     }
 }
-
+优点：由于使用了static关键字，保证了在引用这个变量时，关于这个变量的所以写入操作都完成，所以保证了JVM层面的线程安全
+缺点：不能实现懒加载，造成空间浪费，如果一个类比较大，我们在初始化的时就加载了这个类，但是我们长时间没有使用这个类，这就导致了内存空间的浪费
 静态内部类 延迟加载，线程安全
 public class Singleton {  
     private static class SingletonHolder {  
@@ -1121,18 +1122,36 @@ public class Singleton {
 原理：采用的类装载的机制保证初始化实例只有一个线程。
 	静态内部类在外部类被装载时并不会立即实例化，而是在需要实例化时，才会实例化。
     类的静态属性只会在第一次加载类的时候初始化，所以在这里，JVM帮助我们保证线程的安全性，在类进行初始化时，别的线程是无法进入的。
-静态内部类的缺点
-	静态内部类也有着一个致命的缺点，就是传参的问题，由于是静态内部类的形式去创建单例的，故外部无法传递参数进去，例如Context这种参数，所以，我们创建单例时，可以在静态内部类与DCL模式（双重锁懒汉模式(Double Check Lock)） 里自己斟酌
+
+枚举单例：
+优点：1.线程安全，只会装载一次 2.不会被序列化 3.不会被反射破坏
+public enum World {
+    // 唯一枚举:
+	INSTANCE;
+
+	private String name = "world";
+
+	public String getName() {
+		return this.name;
+	}
+
+	public void setName(String name) {
+		this.name = name;
+	}
+}
+String name = World.INSTANCE.getName();
+破坏单例模式的方法及解决办法
+1、除枚举方式外, 其他方法都会通过反射的方式破坏单例,反射是通过调用构造方法生成新的对象，所以如果我们想要阻止单例破坏，可以在构造方法中进行判断，若已有实例, 则阻止生成新的实例，解决办法如下:
+private SingletonObject1(){
+    if (instance !=null){
+        throw new RuntimeException("实例已经存在，请通过 getInstance()方法获取");
+    }
+}
+2、如果单例类实现了序列化接口Serializable, 就可以通过反序列化破坏单例，所以我们可以不实现序列化接口,如果非得实现序列化接口，可以重写反序列化方法readResolve(), 反序列化时直接返回相关单例对象。
+public Object readResolve() throws ObjectStreamException {
+     return instance;
+}
 ```
-
-单例模式有什么缺点？
-
-优点： 
-  1.提供了对唯一实例的受控访问 
-  2.由于在系统内存中只存在一个对象，因此可以节约系统资源，当需要频繁创建和销毁的对象时单例模式无疑可以提高系统的性能。 
-缺点： 
-  1.由于单利模式中没有抽象层，因此单例类的扩展有很大的困难
-  2.滥用单例将带来一些负面问题，如为了节省资源将数据库连接池对象设计为的单例类，可能会导致共享连接池对象的程序过多而出现连接池溢出 
 
 > 模版方法模式：定义一套固定步骤，方便直接执行
 
