--- a/笔记/终.md
+++ b/笔记/终.md
@@ -948,6 +948,10 @@ lis.add("")//不报错
 1.缓存重复用到的对象
 2.setAccessible(true)来关闭安全检查，安全检查其实也挺耗时的
 
+> 反射原理
+
+Java在编译之后会生成一个class文件，反射通过字节码文件找到其类中的方法和属性等
+
 # JVM类加载机制&垃圾回收 Ok
 
 ## JVM类加载机制了解吗，类什么时候会被加载？类加载的过程具体生命周期是怎样的？
@@ -1117,6 +1121,7 @@ ButterKnife，eventbus都使用了APT技术
 ```
 懒汉：
 public class Singleton {
+	如果线程A在实例化对象的时候，指令重排序导致先将内存地址复制给对象，而不是先将对象在内存中初始化，那么此时线程B进来会跳过第一次null检查，此时是会有空指针问题的
     private volatile static Singleton instance = null;
 
     private Singleton() {
@@ -2435,6 +2440,11 @@ also->并且对象还做什么事情
 > inline  noline  crossinline
 
 inline 关键字的作用，是把 inline 方法以及方法中的 lambda 参数在编译期间复制到调用方，进而减少函数调用以及对象生成。对于有时候我们不想让 inline 关键字对 lambda 参数产生影响，可以使用 noline 关键字。如果想 lambda 也被 inline，但是不影响调用方的控制流程，那么就要是用 crossinline
+
+> 内联函数优缺点
+
+减少函数调用栈
+内联函数代码如果很多，则会大大增加代码量
 
 ## kt的伴生对象是饿汉模式还是懒汉模式
 
