--- a/笔记/终.md
+++ b/笔记/终.md
@@ -745,6 +745,12 @@ SharedPreferences不支持多个进程同时写，会有一定的几率丢失数
   * CheckedException（编译时异常）：需要用try catch显示的捕获IOException、SQLException
   * RuntimeException（运行时异常）：不需要捕获，运行时异常是可能被程序员避免的异常。与检查性异常相反，运行时异常可以在编译时被忽略。NullPointerException、IndexOutOfBoundsException
 
+> OOM
+
+oom可以被捕获，eg:大图加载框架中用到了
+
+原理：申请的内存>现有的内存
+
 #HashMap的原理 ok 
 
 hashmap内部结构是由在数组+链表实现的，其中数组是Node[]数组，存放的是key-value键值对的节点，默认初始长度是16，当链表大于8并且数组长度大于 64 时，链表结构会转换成红黑树结构。之所以添加红黑树是因为一旦链表过长，会严重影响 HashMap 的性能，而红黑树具有快速增删改查的特点，这样就可以有效的解决链表过长时操作比较慢的问题，hashmap key,value均可为null(TreeMap不支持null键，但是支持null值) O(1)
@@ -1245,7 +1251,52 @@ class Computer {
 
 eg:ListView/RecyclerView的Adapter的notifyDataSetChanged方法、广播
 
-在setAdapter的时候，生成一个`AdapterDataSetObserver`，紧接着就是订阅上该观察者，该观察者`onChange`方法里面有`requestLayout`方法，该方法是触发UI发生变化的方法。在`BaseAdapter`里面可以看到`notifyDataSetChanged`实际上触发的是`DataSetObservable`被观察者的`notifyChanged`方法，`notifyChanged`会触发`AdapterDataSetObserver`的`onChange`方法。所以最终会走listView的`requestLayout`，最后刷新了UI。
+在setAdapter的时候，生成一个`AdapterDataSetObserver`，紧接着就是订阅上该观察者，该观察者`onChange`方法里面有`requestLayout`方法，该方法是触发UI发生变化的方法。在`BaseAdapter`里面可以看到`notifyDataSetChanged`实际上触发的是`DataSetObservable`被观察者的`notifyChanged`方法，`notifyChanged`会触发`AdapterDataSetObserver`的`onChange`方法。所以最终会走listView的`requestLayout`，最后刷新了UI
+
+```
+public interface Observer {//抽象观察者
+    public void update();
+}
+public class MyObserver implements Observer {//具体观察者
+
+    @Override
+    public void update() {
+        System.out.println("收到消息，进行处理");
+    }
+
+}
+
+public interface Subject {//抽象被观察者
+    //增加订阅者
+    public void attach(Observer observer);
+    //删除订阅者
+    public void detach(Observer observer);
+    //通知订阅者更新消息
+    public void notify(String message);
+}
+public class ConcreteSubject extends Subject {//具体被观察者
+	private List<Observer> list = new ArrayList<Observer>();
+    
+    @Override
+    public void attach(Observer observer) {
+        list.add(observer);
+    }
+
+    @Override
+    public void detach(Observer observer) {
+        list.remove(observer);
+    }
+
+    @Override
+    public void notify(String message) {
+        for (Observer observer : list) {
+            observer.update(message);
+        }
+    }
+}
+```
+
+
 
 ## 动画里面用到了什么设计模式
 
@@ -1859,17 +1910,25 @@ intentService是个抽象类，继承service。特点是可以异步运行一个
 
 # ANR怎么产生?怎么捕捉？
 
+Android系统对于一些事件如果超过预定时间能未能得到有效响应就会造成ANR
+
 一般来说产生ANR的情况有以下三种：
 
-- Activity的UI在5秒内没有响应输入事件（例如，按键按下，屏幕触摸）–主要类型
-- BroadcastReceiver在10秒内没有执行完毕
-- Service在特定时间内（20秒内）无法处理完成
+- Activity的input事件在5秒内没有响应输入事件（例如，按键按下，屏幕触摸
+- BroadcastReceiver在10秒内没有执行完毕(前台10 后台60)
+- Service在特定时间内（20秒内）无法处理完成(前台20 后台200)
 
 通过避免在主线程做太多耗时的操作来优化
 
 > 怎么捕获
 
 当产生ANR的时候系统会生成一个日志文件，日志存放在/data/anr/文件夹下面，一般名称为traces.txt。导出即可查看
+
+> ANR原理
+
+http://gityuan.com/2019/04/06/android-anr/
+
+
 
 # 广播与RxBus的区别，全局广播与局部广播区别 Ok
 
@@ -2114,6 +2173,8 @@ requestLayout方法是用来触发绘制流程，他会会一层层调用 parent
 invalidate方法也是用来触发绘制流程，主要表现就是会调用draw()方法。虽然他也会走到scheduleTraversals方法，也就是会走到三大流程，但是View会通过mPrivateFlags来判断是否进行onMeasure和onLayout操作。而在用invalidate方法时，更新了mPrivateFlags，所以不会进行measure和layout。同时他也会设置Flag为PFLAG_DIRTY_OPAQUE，所以肯定会执行onDraw方法。
 
 虽然两者都是用来触发绘制流程，但是在measure和layout过程中，只会对  flag 设置为 FORCE_LAYOUT 的情况进行重新测量和布局，而draw方法中只会重绘flag为 dirty  的区域。requestLayout 是用来设置FORCE_LAYOUT标志，invalidate 用来设置 dirty 标志。所以  requestLayout 只会触发 measure 和 layout，invalidate 只会触发 draw。
+
+requestlayout会刷新同层布局？
 
 > 自定义实现一个FlexLayout
 
@@ -2435,7 +2496,7 @@ also->并且对象还做什么事情
 
 扩展函数并没有修改原有的类，而是生成了一个静态的方法,当我们在Kotlin中调用扩展函数时,编译器将会调用自动生成的函数传入对象实例和参数
 
-被inline修饰的函数(内联函数)，可以在编译时被复制到调用处
+被inline修饰的函数(内联函数)，在调用时将整个函数体的代码插人调用语句处
 
 > inline  noline  crossinline
 
@@ -2443,8 +2504,8 @@ inline 关键字的作用，是把 inline 方法以及方法中的 lambda 参数
 
 > 内联函数优缺点
 
-减少函数调用栈
-内联函数代码如果很多，则会大大增加代码量
+优点：减少函数调用栈，加快运行时间
+缺点：内联函数代码如果很多，并过多使用，则会大大增加代码量
 
 ## kt的伴生对象是饿汉模式还是懒汉模式
 
@@ -3678,6 +3739,10 @@ HTTP缓存
 4**	客户端错误，请求包含语法错误或无法完成请求
 
 5**	服务器错误，服务器在处理请求的过程中发生了错误
+
+常用状态码：
+
+200 请求成功 404 找不到资源 302 重定向  500 服务器内部错误 502 请求超时
 
 > 网络封装怎么实现？如果让你写一个网络框架，你怎么写
 
