--- a/笔记/终.md
+++ b/笔记/终.md
@@ -1022,6 +1022,8 @@ DexClassLoader和PathClassLoader，都继承于BaseDexClassLoader。区别在于
 为什么使用双亲委托机制？
 能有有效的确保一个类的全局唯一性
 
+避免核心类篡改：类加载器在发现与核心API同名的类时，发现该类已被加载，就不会去加载，而直接返回已加载过Integer.class，这样便可以防止核心API库被随意篡改。java.lang.Integer
+
 由不同的类加载器加载的类会被JVM当成同一个类吗？
 不会。
 在Java中，我们用包名+类名作为一个类的标识。
@@ -1537,25 +1539,6 @@ AppCompatActivity 设置 Factory 是为了将一些 widget 自动变成 兼容wi
 
 因为匿名内部类会持有外部类的引用，使用回调时，例如A启动B去获取result，由于某些原因原A已经被销毁了，当B设置结果返回A时，实际上A已经被系统重建，和原先的A不是同一个对象了，所以就不能正确的获取结果
 
-##Fragment hide show生命周期变化、replace生命周期变化
-
-Fragment调用show和hide时不会调用Fragment相应生命周期方法，而会调用onHiddenChanged，true隐藏，false显示
-
-replace会重新创建：
-
-```
-Fragment2 onAttach
-Fragment2 onCreate
-Fragment1 onPause
-Fragment1 onStop
-Fragment1 onDestoryView
-Fragment1 onDestory
-Fragment2 onCreateView
-Fragment2 onActivityCreated
-Fragment2 onStart
-Fragment2 onResume
-```
-
 ##启动模式 
 
 > Activity一共有以下四种launchMode：
@@ -1599,6 +1582,39 @@ Fragment2 onResume
 * FLAG_ACTIVITY_CLEAR_TOP：如果目标存在，直接复用，并清除目标以上的活动，否则重建。 singleTask
 * FLAG_ACTIVITY_NO_HISTORY：新开启的Activity不会入栈，只会显示
 * FLAG_ACTIVITY_NEW_TASK和FLAG_ACITIVTY_CLEAR_TASK = 清除默认栈里所有的
+
+# Fragment
+
+## Fragment hide show生命周期变化、replace生命周期变化
+Fragment调用show和hide时不会调用Fragment相应生命周期方法，而会调用onHiddenChanged，true隐藏，false显示;replace会重新创建：
+
+```
+Fragment2 onAttach
+Fragment2 onCreate
+Fragment1 onPause
+Fragment1 onStop
+Fragment1 onDestoryView
+Fragment1 onDestory
+Fragment2 onCreateView
+Fragment2 onActivityCreated
+Fragment2 onStart
+Fragment2 onResume
+```
+
+## attach/detach方法
+
+detach ： 分离指定Fragment的UI视图
+attach ： 重新关联一个Fragment
+
+当Fragment被detach后，Fragment的生命周期执行完onDestroyView就终止了，这意味着Fragment的实例并没有被销毁，只是UI界面被移除了（注意和remove是有区别的）。
+当Fragment被detach后，执行attach操作，会让Fragment从onCreateView开始执行，一直执行到onResume。
+attach无法像add一样单独使用，单独使用会抛异常。方法存在的意义是对detach后的Fragment进行界面恢复
+
+add/remove方法：
+remove()比detach()要彻底一些, 如果不加入到回退栈中, remove()的时候, fragment的生命周期会一直走到onDetach()；如果加入了回退栈，则会只执行到onDestoryView(),Fragment对象还是存在的。
+add一个fragment，如果加到的是同一个id的话，有点像我们的Activity栈，启动多个Activity时候，Activity一个个叠在上面，fragment也是类似，一个个fragment叠在上面
+
+
 
 # onCreate,onResume,onStart里面，什么地方可以获得宽高 
 
@@ -3586,6 +3602,21 @@ get和post (get用来查资源)
 2.get传送的数据量较小，post传送的数据量较大
 3.get参数可见不安全
 
+> 请求 响应报文
+
+请求行、请求头、请求体
+
+* 请求行：方法字段、URL字段、HTTP协议版本字段：GET /index.html HTTP/1.1。
+* 请求头：向服务器发送请求的时候必须指明请求类型；User-Agent：浏览器类型；Host：主机名
+* 请求体：POST发送的数据
+
+
+响应行、响应头、响应体
+
+* 响应行：协议版本、状态码及其描述组成 比如 HTTP/1.1 200 OK
+* 响应头：响应头用于描述服务器的基本信息，以及数据的描述，服务器通过这些数据的描述信息，可以通知客户端如何处理等一会儿它回送的数据。Last-Modified，ETag，Content-Length
+* 响应体：响应体就是响应的消息体，如果是纯数据就是返回纯数据，如果请求的是HTML页面，那么返回的就是HTML代码
+
 ##TCP和UDP的比较
 
 1. TCP面向连接；udp无连接
@@ -4033,7 +4064,8 @@ public class InsertSort implements IArraySort {
 }
 ```
 
-
+满二叉树：二叉树除了叶结点外所有节点都有两个子节点
+完全二叉树：从根往下数，除了最下层外都是全满
 
 # 数据库
 
