--- a/笔记/终.md
+++ b/笔记/终.md
@@ -98,6 +98,10 @@ int常量池中初始化-128~127的范围，所以当为Integer i=127时(相等)
 
 接口中的变量会被隐式地指定为public static final变量
 
+## switch case/if else
+
+switch会生成一个跳转表来指示实际的case分支的地址，而这个跳转表的索引号与switch变量的值是相等的。从而，switch不用像if那样遍历条件分支直到命中条件，而只需访问对应索引号的表项从而到达定位分支的目的
+
 # 线程 ok
 
 ##开启线程3种方式
