--- a/笔记/终.md
+++ b/笔记/终.md
@@ -16,8 +16,9 @@
 
 项目中无需介绍这个项目到底有啥功能，单刀直入这个项目中最值得说的内容。比如遇到的 Bug，自己的思考等等。但是可能很多人会说，业务很简单没什么好说的或者压根没遇到什么问题。遇到这个问题的时候，首先跳脱出业务的框架，去思考其他的问题。相信每个人都写过组件，但是对于如何设计一个好的组件来说就不是每个人都能做的事情了。
 
-
 写项目经验最好按照这样的思路：遇到了什么问题，如何解决以及结果
+
+我觉得自己已经具备了一定的积累，希望可以迈向一个新的台阶
 
 # Java ok
 
@@ -2284,6 +2285,15 @@ epoll机制在Handler中的应用，在主线程的 MessageQueue 没有消息时
 
 https://www.jianshu.com/p/66fa1a8396ad
 
+> epoll select区别
+
+select，poll，epoll都是IO多路复用的机制。I/O多路复用就是监视多个描述符，一旦某个描述符就绪（一般是读就绪或者写就绪），能够通知程序进行相应的读写操作。但select，poll，epoll本质上都是同步I/O，因为他们都需要在读写事件就绪后自己负责进行读写，也就是说这个读写过程是阻塞的
+
+select:O(n):它仅仅知道了，有事件发生了，却并不知道是哪几个流，只能无差别轮询所有流，找出能读出数据，或者写入数据的流，对他们进行操作。
+
+poll:O(n):poll本质上和select没有区别，它将用户传入的数组拷贝到内核空间，然后查询每个fd对应的设备状态， 但是它没有最大连接数的限制，原因是它是基于链表来存储的
+epoll:O(1):epoll会把哪个流发生了怎样的事件通知我们。所以我们说epoll实际上是事件驱动（每个事件关联上fd）的
+
 > 如何实现延时消息，如果移除一个延时消息会解除休眠吗？
 
 发送延时消息，不是延时发送而是延时处理，发送消息后MessageQueue按照Message.when的先后顺序排列，队头的消息是最早触发的消息。处理消息时会调用nativePollOnce(ptr, nextPollTimeoutMillis timeoutMillis = -1表示一直阻塞。如果有delay的消息，则 timeoutMillis表示delay的时间)，这个方法会调用epoll_wait睡眠一段时间，休眠结束后在去处理这个消息。
@@ -2522,10 +2532,19 @@ also->并且对象还做什么事情
 
 inline 关键字的作用，是把 inline 方法以及方法中的 lambda 参数在编译期间复制到调用方，进而减少函数调用以及对象生成。对于有时候我们不想让 inline 关键字对 lambda 参数产生影响，可以使用 noline 关键字。如果想 lambda 也被 inline，但是不影响调用方的控制流程，那么就要是用 crossinline
 
+1. inline 可以让你用内联——也就是函数内容直插到调用处——的方式来优化代码结构，从而减少函数类型的对象的创建；
+2. noinline 是局部关掉这个优化，来摆脱 inline 带来的「不能把函数类型的参数当对象使用」的限制；
+3. crossinline 是局部加强这个优化，让内联函数里的函数类型的参数可以被当做对象使用。
+
 > 内联函数优缺点
 
 优点：减少函数调用栈，加快运行时间
+
+​	避免了函数类型的参数所造成的临时对象的创建
+
 缺点：内联函数代码如果很多，并过多使用，则会大大增加代码量
+
+如果你写的是高阶函数，会有函数类型的参数，加上 inline 就对了
 
 ## kt的伴生对象是饿汉模式还是懒汉模式
 
@@ -3971,7 +3990,7 @@ public static int erfen(){
 		}
 		return -1;
 }
-
+logn
 冒泡排序
 /*
  * 冒泡排序基本概念是：
